# WaterLevelMonitor

./: .gitignore  README.md  flake.nix
.github/workflows/: build.yaml
SensorFirmware/: CMakeLists.txt  flash.overlay  prf.conf  prj.conf  sensor.overlay  shell.nix  upload.sh  west.yml
SensorFirmware/dts/bindings/sensor/: jsn,sr04t.yaml
SensorFirmware/src/: CMakeLists.txt  Kconfig  battery.c  battery.h  bluetooth.c  bluetooth.h  common.h  main.c  temperature.c  watchdog.c  water_level.c
SensorFirmware/src/jsn_sr04t/: CMakeLists.txt  Kconfig  jsn_sr04t.c  jsn_sr04t.h
SensorFirmware/src/nrfx_adc_supply/: nrfx_adc_supply.c  nrfx_adc_supply.h
base_station/: .gitignore  Cargo.nix  Cargo.toml  default.nix  module.nix  rustfmt.toml  shell.nix
base_station/src/: dbus.rs  influxdb.rs  main.rs  sensor.rs
base_station/src/bluez/: bluez.xml  gen.rs  mod.rs
nix/: default.nix  fuzzywuzzy.nix  git-spindle.nix  gitlint.nix  icetea.nix  jsonmerge.nix  junit-xml.nix  junit2html.nix  manifest-tool.nix  mbed-cli.nix  mbed-cloud-sdk.nix  mbed-flasher.nix  mbed-greentea.nix  mbed-host-tests.nix  mbed-ls.nix  nrfutil.nix  pc_ble_driver_py.nix  piccata.nix  pykwalify.nix  pyocd.nix  pyshark-legacy.nix  pyshark.nix  pyspinel.nix  python-dotenv.nix  setuptools_scm_git_archive.nix  sphinxcontrib-svg2pdfconverter.nix  websocket-client.nix  west.nix  whelk.nix
sensor/: .clangd  .gitignore  compile_commands.json  default.nix  openocd-remote.cfg  openocd.cfg  remote.sh  shell.nix
sensor/firmware/: .clang-format  CMakeLists.txt  Kconfig  app.overlay  common.conf  debug.conf  prj.conf  release.conf  sensor.overlay  west.nix  west.yml
sensor/firmware/dts/bindings/sensor/: jsn,sr04t.yaml  nordic,adc-supply.yaml
sensor/firmware/lib/: CMakeLists.txt  Kconfig
sensor/firmware/lib/drivers/: CMakeLists.txt  Kconfig
sensor/firmware/lib/drivers/sensor/: CMakeLists.txt  Kconfig
sensor/firmware/lib/drivers/sensor/jsn_sr04t/: CMakeLists.txt  Kconfig  jsn_sr04t.c
sensor/firmware/lib/drivers/sensor/nrfx_adc_supply/: CMakeLists.txt  Kconfig  nrfx_adc_supply.c
sensor/firmware/src/: CMakeLists.txt  Kconfig  battery.c  battery.h  bluetooth.c  bluetooth.h  main.c  temperature.c  temperature.h  watchdog.c  watchdog.h  water_level.c  water_level.h
sensor/firmware/src/jsn_sr04t/: jsn_sr04t.c  jsn_sr04t.h
sensor/firmware/src/nrfx_adc_supply/: Kconfig  nrfx_adc_supply.c  nrfx_adc_supply.h
sensor/firmware/zephyr/: module.yml
