[package]
name = "water_level_base_station"
version = "0.1.0"
authors = ["Ben Wolsieffer <benwolsieffer@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.41"
blurst = { git = "https://github.com/lopsided98/blurst" }
byteorder = "1.4.3"
clap = "2.33.3"
env_logger = "0.8.4"
isahc = { version = "1.4.0" }
itertools = "0.10.1"
log = "0.4.14"
serde = { version = "1.0.126", features = ["derive"] }
serde_yaml = "0.8.17"
thiserror = "1.0.26"
url = { version = "2.2.2", features = ["serde"] }
uuid = "0.8.2"