[package]
name = "water_level_base_station"
version = "0.1.0"
authors = ["Ben Wolsieffer <benwolsieffer@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.58"
# bluer = { path = "../bluer/bluer", features = ["bluetoothd", "serde"]}
bluer = { git = "https://github.com/lopsided98/bluer", branch = "adv-mon", features = ["bluetoothd", "serde"] }
byteorder = "1.4.3"
clap = { version = "3.2.8", features = ["cargo"] }
env_logger = "0.9.0"
futures = "0.3.21"
isahc = "1.7.2"
itertools = "0.10.3"
log = "0.4.17"
serde = { version = "1.0.138", features = ["derive"] }
serde_yaml = "0.8.24"
thiserror = "1.0.27"
tokio = "1.19.2"
url = { version = "2.2.2", features = ["serde"] }
uuid = "1.1.2"