[package]
name = "water_level_base_station"
version = "0.1.0"
authors = ["Ben Wolsieffer <benwolsieffer@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.102"
bluer = { version = "0.17.4", features = ["bluetoothd", "serde"] }
byteorder = "1.5.0"
clap = { version = "3.2.22", features = ["cargo"] }
env_logger = "0.11.10"
futures = "0.3.32"
isahc = "1.8.1"
itertools = "0.14.0"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = "1.52.3"
url = { version = "2.5.8", features = ["serde"] }
uuid = "1.23.1"